# hex-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  app_api_poc.py  app_event_handler.py  app_events.py  app_hex_api.py  mypy.ini  pyproject.toml  samconfig.toml  template.yaml
adapters/: eventbridge_adapter.py  weather_service.py
adapters/router/: hex_routes.py  poc_routes.py
domain/: hex_manager.py  poc_manager.py
tests/: test_app_api_poc.py  test_event_handler.py  test_hex_api.py  test_poc_hex.py
tests/fake_services/: fake_weather_ddb_service.py  fake_weather_rest_service.py
