[tool.poetry]
name = "hex-api"
version = "0.1.0"
description = ""
authors = ["suren-sk <surirajuk24@gmail.com>"]

packages = [
    { include = "*.py"},
    { include = "adapters"},
    { include = "adapters/out/"},
    { include = "domain"},
    { include = "ports"},
    { include = "ports/out"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
aws-lambda-powertools = "^1.26.3"
flake8 = "^5.0.0"
autoflake = "^1.4"
requests = "^2.28.1"
boto3 = "^1.24.54"
mypy-boto3-dynamodb = "^1.24.36.post1"
boto3-stubs = {extras = ["dynamodb"], version = "^1.24.54"}
black = {version = "^22.6.0", allow-prereleases = true}
types-requests = "^2.28.8"
pytest-mock = "^3.7.0"
coverage = "^6.4.1"
mypy = "^0.961"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch=true
omit = [
    "tests/*"
]